--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -10,6 +10,6 @@
     <label for="post">Content</label>
     <textarea id = "post"  class="form-control" type="text" name="postBody" rows="8" cols="80"><%= postContent%></textarea>
   </div>
-    <button type="submit" class="btn btn-primary" name="publish" value = "<%= postId %>">Publish</button>
+    <button type="submit" class="btn btn-dark" name="publish" value = "<%= postId %>">Publish</button>
 </form>
 <%- include('partials/footer') -%>
