--- a/views/post.ejs
+++ b/views/post.ejs
@@ -3,12 +3,14 @@
 <h1><%= selectedPostTitle%></h1>
 
 <p> <%= selectedPostContent%> </p>
-<div style = "display: flex;">
-    <form action="/compose" method="post">
-      <button type="submit" name="postId" class="btn btn-success" value="<%= selectedPostId %>">Edit</button>
-    </form>
-    <form method="post" action="/delete">
-        <button type="submit" name="postId" value="<%= selectedPostId %>" class="btn btn-danger">Delete</button>
-    </form>
-</div>
+<% if(authenticated){ %>
+  <div style = "display: flex;">
+      <form action="/compose" method="post">
+        <button type="submit" name="postId" class="btn btn-success" value="<%= selectedPostId %>">Edit</button>
+      </form>
+      <form method="post" action="/delete">
+          <button type="submit" name="postId" value="<%= selectedPostId %>" class="btn btn-danger">Delete</button>
+      </form>
+  </div>
+<% } %>
 <%- include('partials/footer') -%>
