--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,12 +27,12 @@
 
     <div class="col-sm-4">
       <div class="card social-block">
-        <div class="card-body">
+        <!-- <div class="card-body">
           <a class="btn btn-block btn-social btn-google" href="/auth/google" role="button">
             <i class="fab fa-google"></i>
             Sign In with Google
           </a>
-        </div>
+        </div> -->
         <div class="card-body">
           <a class="btn btn-block btn-social btn-facebook" href="/auth/facebook" role="button">
             <i class="fab fa-facebook"></i>
